--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -38,6 +38,7 @@
   --color-primary: #0075ff;
   --color-secondary: #F23B6F;
   --colors-error: #FF4444;
+  --color-white: #ffffff;
 
   --section-gap: 160px;
 }
